--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="fable.ico" />
 </head>
-<body>
-    <p>Fable is running</p>
-    <p>You can click on this button:</p>
-    <button class="my-button">Click me</button>
+<body> 
+    <canvas id="myCanvas"></canvas>
     <script src="bundle.js"></script>
 </body>
 </html>
