--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
     <canvas id="myCanvas"></canvas>
-    <img id="image" src="../img/dragon.png" style="position:absolute;">
+    <img id="image" src="#" style="position:absolute;">
     <script src="bundle.js"></script>
 </body>
 </html>
