Dragon now faces direction when moving

--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -9,6 +9,7 @@
 <body> 
     <canvas id="myCanvas"></canvas>
     <img id="image" src="./img/dragon.png" style="position:absolute;">
+    <img id="potion" src="#" style="position:absolute;">
     <script src="bundle.js"></script>
 </body>
 </html>
