adding item images

--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -8,8 +8,9 @@
 </head>
 <body> 
     <canvas id="myCanvas"></canvas>
-    <img id="image" src="./img/dragon.png" style="position:absolute;">
+    <img id="player" src="./img/dragon.png" style="position:absolute;">
     <img id="potion" src="#" style="position:absolute;">
+    
     <script src="bundle.js"></script>
 </body>
 </html>
