--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -8,8 +8,10 @@
 </head>
 <body> 
     <canvas id="myCanvas"></canvas>
-    <img id="player" src="./img/dragon.png" style="position:absolute;">
-    <img id="potion" src="#" style="position:absolute;">
+    <img id="player" src="#" style="position:absolute;">
+    <img id="atkPotion" src="#" style="position:absolute;">
+    <img id="dfPotion" src="#" style="position:absolute;">
+    <img id="hpPotion" src="#" style="position:absolute;">
     
     <script src="bundle.js"></script>
 </body>
