--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -9,8 +9,9 @@
 <body> 
     <canvas id="myCanvas"></canvas>
     <img id="player" src="#" style="position:absolute;">
-    <img id="atkPotion" src="#" style="position:absolute;">
+    <img id="enemy" src="#" style="position:absolute;">
     <img id="dfPotion" src="#" style="position:absolute;">
+    <img id="atkPotion" src="#" style="position:absolute;">
     <img id="hpPotion" src="#" style="position:absolute;">
     
     <script src="bundle.js"></script>
