--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -13,6 +13,7 @@
     <img id="dfPotion" src="#" style="position:absolute;">
     <img id="atkPotion" src="#" style="position:absolute;">
     <img id="hpPotion" src="#" style="position:absolute;">
+    <img id="key" src="#" style="position:absolute;">
     
     <script src="bundle.js"></script>
 </body>
