--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -14,6 +14,7 @@
     <img id="atkPotion" src="#" style="position:absolute;">
     <img id="hpPotion" src="#" style="position:absolute;">
     <img id="key" src="#" style="position:absolute;">
+    <img id="door" src="#" style="position:absolute;">
     
     <script src="bundle.js"></script>
 </body>
