background image changes with transition

--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -7,7 +7,10 @@
   <link rel="shortcut icon" href="fable.ico" />
 </head>
 <body> 
-    <canvas id="myCanvas"></canvas>
+    
+    <img id="bg" src="#" style="position:absolute; z-index:-1;">
+
+    <canvas id="myCanvas" style="z-index:20;"></canvas>
     <img id="dfPotion" src="#" style="position:absolute;">
     <img id="atkPotion" src="#" style="position:absolute;">
     <img id="hpPotion" src="#" style="position:absolute;">
