--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -11,6 +11,9 @@
     <img id="bg" src="#" style="position:absolute; z-index:-1;">
 
     <canvas id="myCanvas" style="z-index:20;"></canvas>
+
+    <img id="blank" src="#" style="position:absolute;">
+
     <img id="dfPotion" src="#" style="position:absolute;">
     <img id="atkPotion" src="#" style="position:absolute;">
     <img id="hpPotion" src="#" style="position:absolute;">
