dragon room transitions more fixed

--- a/adventureGameV2/AdventureGame/public/index.html
+++ b/adventureGameV2/AdventureGame/public/index.html
@@ -12,7 +12,7 @@
 
     <canvas id="myCanvas" style="z-index:20;"></canvas>
 
-    <img id="blank" src="#" style="position:absolute;">
+    <img id="blank" src="/img/whiteTile.png" style="position:absolute;">
 
     <img id="dfPotion" src="#" style="position:absolute;">
     <img id="atkPotion" src="#" style="position:absolute;">
